--- a/donatecase-bukkit/src/main/resources/lang/ru_RU.yml
+++ b/donatecase-bukkit/src/main/resources/lang/ru_RU.yml
@@ -1,35 +1,26 @@
-Prefix: '&7[&5Ультра-Кейс&7] &e'
+Prefix: ''
 NoPermission: '&cУ вас нет прав'
 CaseNotExist: '&cКейса &6%name &cне существует.'
 HasDonatCase: '&cЭтот блок уже донат кейс'
 AddDonatCase: '&eНовый кейс создан'
 RemoveDonatCase: '&eДонат кейс удалён'
-BlockDontDonatCase: '&cВ этом блоке не найдено Донат Кейса'
+BlockDontDonatCase: '&cВ этом блоке не найдено &cДонат-&aКейса'
 GiveKeys: '&eИгроку &6%player &eвыдано &c%key &eключ%ending'
 SetKeys: '&eИгроку &6%player &eустановлено &c%key &eключ%ending'
 DestoryDonatCase: '&cДонат Кейс ломать запрещено'
-NoKey: '&cУ вас нет ключей для этого кейса. Можете купить их тут >>> &6Ds-craft.ru'
-HaveOpenCase: '&cПодождите этот кейс открывается'
+NoKey: '&cУ вас нет ключей для этого кейса. Вы можете купить их на нашем сайте >>> &baqua-lime.ru'
+HaveOpenCase: '&cПодождите пожалуйста, этот кейс открывается.'
 GiveDonat:
- - '&a>&c>&e> &c%player &6выиграл донат %group &6из &5Ультра-Кейса.'
+ - '&a>&c>&e> &6%player &eвыиграл донат %group &eиз &cДонат-&aКейса &eна /warp &6case'
 Key:
-  DisplayName: '&bОткрыть кейс'
-  Lore:
-   - '&6Кейс можно купить на сайте: &cDs-craft.ru'
-   - ''
-   - '&6Выпадает:'
-   - '&7[&8Креатив&7] - &b&n65%'
-   - '&7[&bАдмин&7] - &b&n60'
-   - '&7[&eХелпер&7] - &b&n50'
-   - '&7[&bМодератор&7] - &b&n40'
-   - '&7[&6Ст.Модератор&7] - &b&n35'
-   - '&7[&cАнти-Грифер&7] &a✔ - &b&n30'
-   - '§6§l§m✖§b§lOwner§6§l§m✖&6 - &b&n25'
-   - '&6&l|§f§lМл.Администратор§a✔&6&l| - &b&n20'
-   - '§8§l[§3§lАдминистрация§a§l✔§8§l] - &b&n15'
-   - '§8§l[§b§lАдминистрация§8§l] §8§l[§c§lPRO§b§l✔§8§l] - &b&n10'
-   - '§8§l[§c§lГл.Администрация§a§l✔§8§l] - &b&n5'
-   - ''
+ DisplayName: '&bОткрыть кейс &7&l(&eКлючей в наличии: &6<key>&7&l)'
+ Lore:
+  - '&eКейс можно купить на сайте: &caqua-lime.ru'
+  - ''
+  - '&eВыпадает:'
+  - '&7&l[&aVIP&7&l] &e- &b&n60%'
+  - '&7&l[&bVIP&6+&7&l] &e- &b&n 15%'
+  - '&7&l[&5Deluxe&7&l] &e- &b&n2%'
 Help:
  - '&9/%cmd help &3- &2Помощь по плагину'
  - '&9/%cmd create &7(&aКейс&7) &3- &2Установить кейс &7(&6Смотрите на блок&7)'
